--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"><div class="d-flex justify-content-center  p-5 mt-5">
 <img alt="Yambarn Official" src="/yambarn.svg"></div>
-<h2 class="d-flex justify-content-center align-content-center">We are currently going maintaining the app to give you the best </h2></div>
+<h2 class="d-flex justify-content-center align-content-center">We are currently maintaining the app to give you the best </h2></div>
 
 
 
